add some css of new section

--- a/style.css
+++ b/style.css
@@ -9,10 +9,13 @@ body{
   background-color: #e5e5e5;
 }
 
+
+
+/* Navbar 1 */
 .nav-container{
   width: 100%;
   height: 60px;
-  background-color: #333;
+  background-color: black;
   display: flex;
   gap: 1rem;
   justify-content: space-between;
@@ -29,22 +32,23 @@ body{
 .nav-input{
   background-color: #f0f0f0;
   border: none;
-  border-radius: 5px;
+  border-radius: 0.5em;
   display: flex;
-
 }
 
 #Search-input{
   height: 2.8em;
-  border-radius: 5px;
 }
 
 .nav-input #nav-select{
   height: 2.8em;
   width: 2.7em;
-  /* background-color: rgb(187, 184, 184); */
   border: none;
-  border-radius: 5rem,;
+}
+
+.dropdrown select{
+  border-top-left-radius: 0.5em;
+  border-bottom-left-radius: 0.5em;
 }
 
 .nav-input input{
@@ -59,7 +63,8 @@ body{
   background-color: rgba(255, 165, 0, 80%);
   padding: 1rem;
   text-align: end;
-  border-radius: 2rem,;
+  border-top-right-radius: 0.5em;               /*give only 1 side radius top right*/
+  border-bottom-right-radius: 0.5em;            /* give only 1 side radius botton right*/
 }
 
 #nav-lang{
@@ -70,6 +75,8 @@ body{
   font-size: 1rem;
 }
 
+
+/* Navbar 2 */
 .nav-container-2{
   width: 100%;
   height: 39px;
@@ -86,6 +93,7 @@ body{
   margin-left: 1em;
   font-weight: 600;
 }
+
 
 
 /* Body div 1 & 2 */
@@ -196,14 +204,83 @@ body{
   background-color: transparent;
   border: none;
   box-shadow:
-  0 -0.5em 5px -0.5em gray,             /* top */
+  0 -0.5em 0.5em -0.5em gray,             /* top */
   0 0.5em 0.5em -0.5em gray,            /* bottom */
-  -5px 0 5px -5px gray;                /* left */
+  -0.5em 0 0.5em -0.5em gray;                /* left */
 }
 
+
+/* body div 5 */
 .div5{
   padding-top: 22em;
+  /* padding: 0; */
 }
-.kurta-div p{
+.praStyle{
+ display: -webkit-box;
+  -webkit-line-clamp: 1;       /* show only 2 lines */
+  -webkit-box-orient: vertical;
   overflow: hidden;
+  text-overflow: ellipsis;
+  
+}
+
+.kurta-div {
+ display: grid;
+ grid-template-columns: repeat(2, 1fr);
+
+}
+
+.content-1pro{
+  padding-right: 0.5em; 
+}
+.content-1pro p{
+  display: -webkit-box;
+  -webkit-line-clamp: 2;       /* show only 2 lines */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.content-1pro strong{
+  display: inline;
+}
+
+.content-1pro div{
+  margin: 1em;
+}
+
+.image {
+  text-align: center;
+}
+
+.main-content1 img{
+  margin-left: 0.4em;
+  padding: 0.1rem;
+  border-radius: 0.5em;
+  border: 0.1rem solid black;
+}
+
+
+#table{
+  padding-left: 20em;
+  padding-right: 20em;
+}
+.table-line{
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  background-color: white;
+  /* margin: 3em; */
+  padding: 2em;
+}
+
+.table-line img{
+  /* margin: 2rem; */
+  height: 10em;
+  margin-left: 10em;
+}
+
+.table-line div{
+  font-size: 1.3em;
+  font-weight: bold;
 }
